--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   codecov:
     container:
-      image: swift:latest
+      image: swift:5.3.2-bionic
     runs-on: ubuntu-latest
     steps:
     - run: apt-get update && apt-get install gtk+-3.0
