doh. forgot to pass yes flag

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,7 +12,7 @@ jobs:
       image: swift:5.3.2-bionic
     runs-on: ubuntu-latest
     steps:
-    - run: apt-get update && apt-get install gtk+-3.0
+    - run: apt-get update && apt-get install -y gtk+-3.0
     - uses: actions/checkout@v2
     - run: swift test --enable-test-discovery --enable-code-coverage
     - uses: mattpolzin/swift-codecov-action@0.6.0
